--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -115,7 +115,7 @@
 											<div class="column_attr clearfix align_center" style="background-color:#fff;padding:40px 10%;border-radius: 20px; box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);">
 												
 												<div class="image_frame image_item no_link scale-with-grid alignnone no_border">
-													<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-icon9.png" %}" alt="scooterrental-home-icon9" title width="96" height="96"> </div>
+													<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-icon10.png" %}" alt="scooterrental-home-icon10" title width="96" height="96"> </div>
 												</div>
 												<hr class="no_line" style="margin:0 auto 40px">
 												
@@ -135,7 +135,7 @@
 											<div class="column_attr clearfix align_center" style="background-color:#fff;padding:40px 10%;border-radius: 20px; box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);">
 												
 												<div class="image_frame image_item no_link scale-with-grid alignnone no_border">
-													<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-icon9.png" %}" alt="scooterrental-home-icon9" title width="96" height="96"> </div>
+													<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-icon10.png" %}" alt="scooterrental-home-icon10" title width="96" height="96"> </div>
 												</div>
 												<hr class="no_line" style="margin:0 auto 40px">
 												
@@ -155,7 +155,7 @@
 											<div class="column_attr clearfix align_center" style="background-color:#fff;padding:40px 10%;border-radius: 20px; box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);">
 												
 												<div class="image_frame image_item no_link scale-with-grid alignnone no_border">
-													<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-icon9.png" %}" alt="scooterrental-home-icon9" title width="96" height="96"> </div>
+													<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-icon10.png" %}" alt="scooterrental-home-icon10" title width="96" height="96"> </div>
 												</div>
 												<hr class="no_line" style="margin:0 auto 40px">
 												
@@ -316,11 +316,10 @@ How it Works : A Partnership</span> </h2><br>
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="about.html"> About us</a> </p>
-									<p> <a href="service.html">Service</a> </p>
-									<p> <a href="ijabo.html">How it works</a> </p>
-									<p> <a href="contact.html">Contact</a> </p>
-									<p> <a href="#">fAQs</a> </p>
+									<p> <a href="{% url 'about' %}"> About us</a> </p>
+									<p> <a href="{% url 'service' %}">Service</a> </p>
+									<p> <a href="{% url 'ijabo' %}">Ijabo</a> </p>
+									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -336,7 +335,7 @@ How it Works : A Partnership</span> </h2><br>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="contact.html">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -351,7 +350,6 @@ How it Works : A Partnership</span> </h2><br>
 									<p> <a href="#">Amazi</a> </p>
 									<p> <a href="#">Uhira</a> </p>
 									<p> <a href="#">Voma</a> </p>
-									<p> <a href="#">Ijabo</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -365,12 +363,12 @@ How it Works : A Partnership</span> </h2><br>
 					</div>
 				</div>
 			</div>
-</footer>
+		</footer>
 	</div>
 	<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
 		<div class="menu_wrapper"></div>
-		<div class="extras"> <a href="shop.html" class="action_button" target="_blank">BUY NOW</a>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">BUY NOW</a>
 			<div class="extras-wrapper"></div>
 		</div>
 	</div>
