--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -134,7 +134,7 @@
 												<hr class="no_line" style="margin:0 auto 15px">
 												<p style="color:#8e9aac;"> To ensure all taps provide safe water and encourage rainwater harvesting,  Amazi provides first flush diverter systems and point of entry filtration systems. With this solution, households, schools, clinics can save on their water bill in the rainy season while reducing the amount of run-off water that would otherwise cause flooding. </p>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<hr class="no_line" style="margin:0 auto 10px"> <a class="button button_size_2 button_theme" href="service.html"><span class="button_label">Read More</span></a> </div>
+												<hr class="no_line" style="margin:0 auto 10px"> <a class="button button_size_2 button_theme" href="{% url 'service' %}"><span class="button_label">Read More</span></a> </div>
 										</div>
 									</div>
 								</div>
@@ -150,7 +150,7 @@
 												<hr class="no_line" style="margin:0 auto 15px">
 												<p style="color:#8e9aac;"> INUMA creates a borehole-fed micro-grid piped safe water network where purified safe water is available at public points and piped into households for private access. All water is purified through a treatment process, pumped using solar and AC and sold via pre-paid water meters activated through a token.<BR><br> </p>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<hr class="no_line" style="margin:0 auto 10px"> <a class="button button_size_2 button_theme" href="service.html"><span class="button_label">Read More</span></a> </div>
+												<hr class="no_line" style="margin:0 auto 10px"> <a class="button button_size_2 button_theme" href="{% url 'service' %}"><span class="button_label">Read More</span></a> </div>
 										</div>
 									</div>
 								</div>
@@ -170,7 +170,7 @@ Our systems allow for reliable access to safe water anywhere, even when living f
 														Our team accompanies you from survey to maintenance.  </p>
 												<hr class="no_line" style="margin:0 auto 10px">
 												
-												<hr class="no_line" style="margin:0 auto 10px"> <a class="button button_size_2 button_theme" href="service.html"><span class="button_label">Read More</span></a> </div>
+												<hr class="no_line" style="margin:0 auto 10px"> <a class="button button_size_2 button_theme" href="{% url 'service' %}"><span class="button_label">Read More</span></a> </div>
 										</div>
 									</div>
 								</div>
@@ -200,7 +200,7 @@ Our systems allow for reliable access to safe water anywhere, even when living f
 												<hr class="no_line" style="margin:0 auto 10px">
 											</div>
 										</div>
-										<div class="column mcb-column mcb-item-z22mf0xsu one column_button"> <a class="button button_size_2 button_theme" href="service.html"><span class="button_label">Read More</h6></span></a> </div>
+										<div class="column mcb-column mcb-item-z22mf0xsu one column_button"> <a class="button button_size_2 button_theme" href="{% url 'service' %}"><span class="button_label">Read More</h6></span></a> </div>
 									</div>
 								</div>
 							</div>
@@ -224,7 +224,6 @@ Our systems allow for reliable access to safe water anywhere, even when living f
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-zyabt1q4n one column_icon_box">
 											<div class="icon_box icon_position_top no_border">
-												<div class="image_wrapper"><img src="{% static "web/images/scooterrental-home-icon1.png" %}" class="scale-with-grid"> </div>
 												<div class="desc_wrapper">
 													<h5 class="title">
 													<b>Hadidja Mukabaranga</b>
@@ -240,7 +239,6 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-7gg4rz0zd one column_icon_box">
 											<div class="icon_box icon_position_top no_border">
-												<div class="image_wrapper"><img src="{% static "web/images/scooterrental-home-icon2.png"%}" class="scale-with-grid"> </div>
 												<div class="desc_wrapper">
 													<h5 class="title">
 													<b>Andre Ndejuru</b><br>
@@ -255,7 +253,6 @@ We had 10 cows but the milk production was so low that its returns was not enoug
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-lutr7tatd one column_icon_box">
 											<div class="icon_box icon_position_top no_border">
-												<div class="image_wrapper"><img src="{% static "web/images/scooterrental-home-icon3.png" %}" class="scale-with-grid"> </div>
 												<div class="desc_wrapper">
 <h5 class="title">
 													<b>Wendy Davenport</b>
@@ -397,11 +394,10 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="about.html"> About us</a> </p>
-									<p> <a href="service.html">Service</a> </p>
-									<p> <a href="ijabo.html">How it works</a> </p>
-									<p> <a href="contact.html">Contact</a> </p>
-									<p> <a href="#">fAQs</a> </p>
+									<p> <a href="{% url 'about' %}"> About us</a> </p>
+									<p> <a href="{% url 'service' %}">Service</a> </p>
+									<p> <a href="{% url 'ijabo' %}">Ijabo</a> </p>
+									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -417,7 +413,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="contact.html">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -432,7 +428,6 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 									<p> <a href="#">Amazi</a> </p>
 									<p> <a href="#">Uhira</a> </p>
 									<p> <a href="#">Voma</a> </p>
-									<p> <a href="#">Ijabo</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -451,7 +446,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 	<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
 		<div class="menu_wrapper"></div>
-		<div class="extras"> <a href="shop.html" class="action_button" target="_blank">BUY NOW</a>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">BUY NOW</a>
 			<div class="extras-wrapper"></div>
 		</div>
 	</div>
