--- a/users/templates/website/service.html
+++ b/users/templates/website/service.html
@@ -102,31 +102,7 @@
 												<hr class="no_line" style="margin:0 auto 20px">
 												 </div>
 										</div>
-										<div class="column mcb-column mcb-item-lantdhje2 one column_column">
-											<div class="column_attr clearfix" style="background-color:#fff;padding:50px 0;border-radius: 10px; 	box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.06); ">
-												<h4 style="text-align:center">Specification</h4>
-												<table class="scooterrental-table">
-													<tbody>
-														<tr>
-															<td class="t1">Engine</td>
-															<td class="t2">49.9 cc</td>
-														</tr>
-														<tr>
-															<td class="t1">Top speed</td>
-															<td class="t2">30 mph</td>
-														</tr>
-														<tr>
-															<td class="t1">Weight</td>
-															<td class="t2">89.5 kg</td>
-														</tr>
-														<tr>
-															<td class="t1">Seat height</td>
-															<td class="t2">810 mm</td>
-														</tr>
-													</tbody>
-												</table>
-											</div>
-										</div>
+										
 									</div>
 								</div>
 								<div class="wrap mcb-wrap mcb-wrap-f6iz165n0 one-second valign-top clearfix" style>
@@ -165,31 +141,7 @@
 												<hr class="no_line" style="margin:0 auto 20px">
 												 </div>
 										</div>
-										<div class="column mcb-column mcb-item-wq19v54xz one column_column">
-											<div class="column_attr clearfix" style="background-color:#fff;padding:50px 0;border-radius: 10px; 	box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.06); ">
-												<h4 style="text-align:center">Specification</h4>
-												<table class="scooterrental-table">
-													<tbody>
-														<tr>
-															<td class="t1">Engine</td>
-															<td class="t2">49.9 cc</td>
-														</tr>
-														<tr>
-															<td class="t1">Top speed</td>
-															<td class="t2">30 mph</td>
-														</tr>
-														<tr>
-															<td class="t1">Weight</td>
-															<td class="t2">89.5 kg</td>
-														</tr>
-														<tr>
-															<td class="t1">Seat height</td>
-															<td class="t2">810 mm</td>
-														</tr>
-													</tbody>
-												</table>
-											</div>
-										</div>
+										
 									</div>
 								</div>
 								<div class="wrap mcb-wrap mcb-wrap-cko0k2bnq one valign-top clearfix" style>
@@ -208,31 +160,7 @@
 												<hr class="no_line" style="margin:0 auto 20px">
  </div>
 										</div>
-										<div class="column mcb-column mcb-item-276vhgj1z one column_column">
-											<div class="column_attr clearfix" style="background-color:#fff;padding:50px 0;border-radius: 10px; 	box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.06); ">
-												<h4 style="text-align:center">Specification</h4>
-												<table class="scooterrental-table">
-													<tbody>
-														<tr>
-															<td class="t1">Engine</td>
-															<td class="t2">49.9 cc</td>
-														</tr>
-														<tr>
-															<td class="t1">Top speed</td>
-															<td class="t2">30 mph</td>
-														</tr>
-														<tr>
-															<td class="t1">Weight</td>
-															<td class="t2">89.5 kg</td>
-														</tr>
-														<tr>
-															<td class="t1">Seat height</td>
-															<td class="t2">810 mm</td>
-														</tr>
-													</tbody>
-												</table>
-											</div>
-										</div>
+										
 									</div>
 								</div>
 								<div class="wrap mcb-wrap mcb-wrap-41darx7or one-second valign-top clearfix" style>
@@ -273,31 +201,11 @@
 												<hr class="no_line" style="margin:0 auto 20px">
 												 </div>
 										</div>
-										<div class="column mcb-column mcb-item-oehiz72en one column_column">
-											<div class="column_attr clearfix" style="background-color:#fff;padding:50px 0;border-radius: 10px; 	box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.06); ">
-												<h4 style="text-align:center">Specification</h5>
-													<table class="scooterrental-table">
-														<tbody>
-															<tr>
-																<td class="t1">Engine</td><td class="t2">49.9 cc</td>
-															</tr>
-															<tr>
-																<td class="t1">Top speed</td><td class="t2">30 mph</td>
-															</tr>
-															<tr>
-																<td class="t1">Weight</td><td class="t2">89.5 kg</td>
-															</tr>
-															<tr>
-																<td class="t1">Seat height</td><td class="t2">810 mm</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-										</div>
+										
 									</div>
 								</div>
 							</div>
+							<br><br><br><br><br><br><br><br>
 							<div class="section mcb-section mcb-section-f698c00f3 full-width bg-cover" style="padding-top:120px;padding-left:5%;padding-right:5%;background-color:#020202" >
 								<div class="section_wrapper mcb-section-inner">
 									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00d285;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
@@ -311,11 +219,11 @@
 												<div class="column_attr clearfix mobile_align_center" style="padding:10px 0 0;">
 													<h3 style="color:#FFF;"><i class="icon-mobile" style="color:#fff"></i>+250 788 888 888</h3>
 													<hr class="no_line" style="margin:0 auto 40px">
-													<h5>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt ut eros a, vulputate consequat.</h5>
+													<h5>Simple, Affordable and Reliable Access to clean safe water</h5>
 												</div>
 											</div>
 											<div class="column mcb-column mcb-item-7a8f9e84c one column_button">
-												<a class="button button_size_2" href="contact.html" ><span class="button_label">SEND US A MESSAGE</span></a>
+												<a class="button button_size_2" href="{% url 'contact_us' %}" ><span class="button_label">SEND US A MESSAGE</span></a>
 											</div>
 										</div>
 									</div>
@@ -334,11 +242,10 @@
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="about.html"> About us</a> </p>
-									<p> <a href="service.html">Service</a> </p>
-									<p> <a href="ijabo.html">How it works</a> </p>
-									<p> <a href="contact.html">Contact</a> </p>
-									<p> <a href="#">fAQs</a> </p>
+									<p> <a href="{% url 'about' %}"> About us</a> </p>
+									<p> <a href="{% url 'service' %}">Service</a> </p>
+									<p> <a href="{% url 'ijabo' %}">Ijabo</a> </p>
+									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -354,7 +261,7 @@
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="contact.html">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -369,7 +276,6 @@
 									<p> <a href="#">Amazi</a> </p>
 									<p> <a href="#">Uhira</a> </p>
 									<p> <a href="#">Voma</a> </p>
-									<p> <a href="#">Ijabo</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -383,17 +289,16 @@
 					</div>
 				</div>
 			</div>
-</footer>
+		</footer>
 		</div>
 		<div id="Side_slide" class="right dark" data-width="250">
-			<div class="close-wrapper">
-				<a href="#" class="close"><i class="icon-cancel-fine"></i></a>
-			</div>
-			<div class="menu_wrapper"></div>
-			<div class="extras">
-				<a href="#" class="action_button" target="_blank">BUY NOW</a><div class="extras-wrapper"></div>
-			</div>
-		</div><div id="body_overlay"></div>
+		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
+		<div class="menu_wrapper"></div>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">BUY NOW</a>
+			<div class="extras-wrapper"></div>
+		</div>
+	</div>
+		<div id="body_overlay"></div>
 		
 		
 
