pictures added successfully

--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -248,7 +248,7 @@ Our systems allow for reliable access to safe water anywhere, even when living f
 											<div class="icon_box icon_position_top no_border">
 												<div class="desc_wrapper">
 													<h5 class="title">
-													<b>Hadidja Mukabaranga</b>
+													<b>Hadidja Mukabaranga</b> <br>
 													INUMA-Household Connected<br><br>
 													Having INUMA in my house means
 
@@ -277,7 +277,7 @@ We had 10 cows but the milk production was so low that its returns was not enoug
 											<div class="icon_box icon_position_top no_border">
 												<div class="desc_wrapper">
 <h5 class="title">
-													<b>Wendy Davenport</b>
+													<b>Wendy Davenport</b> <br>
 Philanthropist<br><br>
 Having INUMA in my house means
 
@@ -316,23 +316,23 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 												</div>
 										</div>
 										<div class="column mcb-column mcb-item-rdxp6j57i one column_column">
-											<div class="column_attr clearfix" style="background-image:url({% static 'web/images/scooterrental-home-icon5.png' %});background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
+											<div class="column_attr clearfix" style="background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
 												<h5 style="color:#8e9aac;"><b style="color:black">Great Low Prices</b> - Competitive pricing on
 all our services. We charge less than half our competitors' prices</h5> </div>
 										</div>
 
 										<div class="column mcb-column mcb-item-rdxp6j57i one column_column">
-											<div class="column_attr clearfix" style="background-image:url({% static 'web/images/scooterrental-home-icon5.png' %});background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
+											<div class="column_attr clearfix" style="background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
 												<h5 style="color:#8e9aac;"><b style="color:black">Quality</b> – Our services and products are of the highest quality and done with durability in mind. </h5> </div>
 										</div>
 
 										<div class="column mcb-column mcb-item-rdxp6j57i one column_column">
-											<div class="column_attr clearfix" style="background-image:url({% static 'web/images/scooterrental-home-icon5.png' %});background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
+											<div class="column_attr clearfix" style="background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
 												<h5 style="color:#8e9aac;"><b style="color:black">Committed Staff</b> - Our staff is highly trained and committed to eradicating water scarcity in Rwanda.</h5> </div>
 										</div>
 
 										<div class="column mcb-column mcb-item-rdxp6j57i one column_column">
-											<div class="column_attr clearfix" style="background-image:url({% static 'web/images/scooterrental-home-icon5.png' %});background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
+											<div class="column_attr clearfix" style="background-repeat:no-repeat;background-position:left center;padding:15px 0 0 80px;">
 												<h5 style="color:#8e9aac;"><b style="color:black">Support the Local Market</b> - At WARwanda, the majority of our supplies are obtained locally and local laborers make more than 90% our staff. Working with us, supports the local economy and provides jobs to young people.</h5> </div>
 										</div>
 										
