--- a/users/templates/website/service.html
+++ b/users/templates/website/service.html
@@ -90,7 +90,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="section mcb-section mcb-section-1fi4dc2ig" style="padding-top:120px;padding-bottom:300px">
+						<div class="section mcb-section mcb-section-1fi4dc2ig" style="padding-top:120px;">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-9y5i6yr10 one-second valign-top clearfix" style="padding:0 7%">
 									<div class="mcb-wrap-inner">
