--- a/users/templates/website/post.html
+++ b/users/templates/website/post.html
@@ -67,7 +67,7 @@
 			</header>
 		</div>
         <div id="Content">
-            <div class="content_wrapper clearfix">singsing
+            <div class="content_wrapper clearfix">
                 <div class="sections_group">
                     <div class="post type-post format-standard has-post-thumbnail hentry category-single">
                         
