--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -152,7 +152,7 @@ h1,h2,h3,h4,h5,h6{
 						<div class="column one">
 							<div class="top_bar_left clearfix">
 								<div class="logo">
-									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="50" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="50" alt="scooterrental" data-no-retina></a>
 								</div>
                                 
 								<div class="menu_wrapper">
@@ -336,19 +336,19 @@ h1,h2,h3,h4,h5,h6{
                 var retinaEl = jQuery("#logo img.logo-main");
                 var retinaLogoW = retinaEl.width();
                 var retinaLogoH = retinaEl.height();
-                retinaEl.attr("src", "images/retina-theme.png").width(retinaLogoW).height(retinaLogoH);
+                retinaEl.attr("src", "/static/web/images/scooterrental.png").width(retinaLogoW).height(retinaLogoH);
                 var stickyEl = jQuery("#logo img.logo-sticky");
                 var stickyLogoW = stickyEl.width();
                 var stickyLogoH = stickyEl.height();
-                stickyEl.attr("src", "images/retina-theme.png").width(stickyLogoW).height(stickyLogoH);
+                stickyEl.attr("src", "/static/web/images/scooterrental.png").width(stickyLogoW).height(stickyLogoH);
                 var mobileEl = jQuery("#logo img.logo-mobile");
                 var mobileLogoW = mobileEl.width();
                 var mobileLogoH = mobileEl.height();
-                mobileEl.attr("src", "images/retina-theme.png").width(mobileLogoW).height(mobileLogoH);
+                mobileEl.attr("src", "/static/web/images/scooterrental.png").width(mobileLogoW).height(mobileLogoH);
                 var mobileStickyEl = jQuery("#logo img.logo-mobile-sticky");
                 var mobileStickyLogoW = mobileStickyEl.width();
                 var mobileStickyLogoH = mobileStickyEl.height();
-                mobileStickyEl.attr("src", "images/retina-theme.png").width(mobileStickyLogoW).height(mobileStickyLogoH);
+                mobileStickyEl.attr("src", "/static/web/images/scooterrental.png").width(mobileStickyLogoW).height(mobileStickyLogoH);
             }
         });
     </script>
