--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -133,7 +133,7 @@
     <!--=================================================-->
 
     <!--Pace - Page Load Progress Par [OPTIONAL]-->
-    <link href="{% static "plugins/pace/pace.min.css" %}" rel="stylesheet">
+    <link href="{% static "plugins/pace/pace.min.css" %}">
     <script src="{% static "plugins/pace/pace.min.js" %}"></script>
 
 
