--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -388,7 +388,7 @@ for (i = 0; i < updateBtns.length; i++) {
 function updateUserOrder(productId, action){
 	console.log('User is authenticated, sending data...')
 
-		var url = 'http://wateraccess.t3ch.rw:8234/updateItem/'
+		var url = '/updateItem/'
 
 		fetch(url, {
 			method:'POST',
